--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,6 @@
 {
     "name": "MarkWilson/VerbalExpressionsPhp",
     "description": "VerbalExpressions for PHP; ported from jehna/VerbalExpressions",
-    "minimum-stability": "stable",
     "authors": [
         {
             "name": "Mark Wilson",
@@ -13,7 +12,8 @@
             "MarkWilson\\": "src/"
         }
     },
-    "require": {
-        "phpunit/phpunit": "3.7.22"
+    "require-dev": {
+        "phpunit/phpunit": "3.7.*",
+        "squizlabs/php_codesniffer": "1.*"
     }
 }
