--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "markwilson/verbal-expressions-php",
     "description": "VerbalExpressions for PHP; ported from jehna/VerbalExpressions",
+    "license": "MIT",
     "authors": [
         {
             "name": "Mark Wilson",
